[package]
name = "lum_config"
version = "0.1.2"
authors = ["Torben Schweren"]
edition = "2021"
rust-version = "1.82.0"
description = "lum framework's config library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_config"
license = "MIT"
keywords = ["framework", "config"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

# thiserror has to be a dependency to use the Error derive macro.
# In code, we are still importing from lum_libs, but the macro needs the thiserror crate to be present.
[dependencies]
lum_libs = "0.1.3"
thiserror = "2.0.3"
