[package]
name = "lum_config"
version = "0.1.5"
authors = ["Torben Schweren"]
edition = "2021"
rust-version = "1.82.0"
description = "lum framework's config library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_config"
license = "MIT"
keywords = ["framework", "config"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

# serde and thiserror have to be a dependency to use their derive macros.
# In code, we are still importing from lum_libs, but their macros need the respective crate to be present.
[dependencies]
lum_libs = "0.1.5"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.7"
