[package]
name = "lum_config"
version = "0.2.3"
authors = ["Torben Schweren"]
edition = "2024"
rust-version = "1.85.0"
description = "lum framework's config library"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_config"
license = "MIT"
keywords = ["framework", "config"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
lum_libs = { version = "0.2.4", features = ["dirs", "serde", "serde-env", "serde_json", "uuid"] }
thiserror = "2.0.12"
